# sensor-watcher

./: README.md
esp32/: partitions.csv  sdkconfig.defaults
esp32c3/: sdkconfig.defaults
esp32c6/: sdkconfig.defaults
esp32s3/: CMakeLists.txt  sdkconfig.defaults
source/: CMakeLists.txt  adc.c  adc.h  app_main.c  application.c  application.h  backends.c  backends.h  bigpacks.c  bigpacks.h  bigpostman.c  bigpostman.h  ble.c  ble.h  board.c  board.h  devices.c  devices.h  enums.c  enums.h  framer.c  framer.h  hmac.c  hmac.h  httpdate.c  httpdate.h  i2c.c  i2c.h  idf_component.yml  logs.c  logs.h  measurements.c  measurements.h  nodes.c  nodes.h  now.h  onewire.c  onewire.h  pbuf.c  pbuf.h  (+8 more)
tools/: bigpacks.py  bigpostman-cli.py  bigpostman.py  crc32.py  postman-cli.py  postman.py  sensorwatcher-cli.py
